<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PinActivity" >

      <TextView
            android:id="@+id/amount2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dip"
            android:textSize="58sp" />
          
        
        <TableLayout
        android:layout_width="fill_parent"
        android:id="@+id/numbers"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" >

            <Button
                android:layout_width="fill_parent"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:textSize="48sp"
                android:layout_weight="1"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_height="wrap_content"
                android:text="@string/num1" >
            </Button>

            <Button
                android:layout_width="fill_parent"
                android:onClick="numberclick"
                android:layout_weight="1"
                android:textSize="48sp"
                android:textColor="#ffffff"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_height="wrap_content"
                android:text="@string/num2" >
            </Button>

            <Button
                android:layout_width="fill_parent"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="48sp"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_height="wrap_content"
                android:text="@string/num3" >
            </Button>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="fill_parent"
                android:padding="10dip"
                android:textColor="#ffffff"
                android:onClick="numberclick"
                android:textSize="48sp"
                android:layout_weight="1"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_height="wrap_content"
                android:text="@string/num4">
            </Button>

            <Button
                android:layout_width="fill_parent"
                android:padding="10dip"
                android:onClick="numberclick"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="48sp"
                android:textColor="#ffffff"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_height="wrap_content"
                android:text="@string/num5" >
            </Button>

            <Button
                android:layout_width="fill_parent"
                android:padding="10dip"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:onClick="numberclick"
                android:gravity="center"
                android:textSize="48sp"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_height="wrap_content"
                android:text="@string/num6">
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:onClick="numberclick"
                android:textSize="48sp"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:text="@string/num7" >
            </Button>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_weight="1"
                android:textSize="48sp"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/num8" >
            </Button>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:textSize="48sp"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/num9" >
            </Button>
        </TableRow>
        
        <TableRow android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            
             <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:textSize="48sp"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/dot" >
            </Button>
            
              <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:textSize="48sp"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/num0" >
            </Button>
            
            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:src="@drawable/xmark"
                android:gravity="center" >
            </ImageButton>
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:textSize="32sp"
                android:onClick="numberclick"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/send" >
            </Button>
            
        </TableRow>
    </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/amount2"
            android:layout_below="@+id/amount2"
            android:id="@+id/pinnum"
            android:ems="10"
            android:hint="Pin"
            android:gravity="center"/>

</RelativeLayout>
